implement user login and register - mvp achieved

--- a/foundations/src/main/webapp/login.html
+++ b/foundations/src/main/webapp/login.html
@@ -6,10 +6,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SoulNotes - Sign in!</title>
+    <title>SoulNotes - Login!</title>
 </head>
 <body>
-<script src="main.js"></script>
+<script src="scripts/login.js"></script>
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -23,13 +23,11 @@
                             <p class="text-white-50 mb-5">Please enter your login and password!</p>
 
                             <div class="form-outline form-white mb-4">
-                                <input type="username" id="username" class="form-control form-control-lg" />
-                                <label class="form-label" for="username">Username</label>
+                                <input type="username" id="username" class="form-control form-control-lg" placeholder="Username"/>
                             </div>
 
                             <div class="form-outline form-white mb-4">
-                                <input type="password" id="password" class="form-control form-control-lg" />
-                                <label class="form-label" for="password">Password</label>
+                                <input type="password" id="password" class="form-control form-control-lg" placeholder="Password"/>
                             </div>
 
                             <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
@@ -45,7 +43,7 @@
                         </div>
 
                         <div>
-                            <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+                            <p class="mb-0">Don't have an account? <a href="register.html" class="text-white-50 fw-bold">Sign up here!</a>
                             </p>
                         </div>
 
