--- a/foundations/src/main/webapp/index.html
+++ b/foundations/src/main/webapp/index.html
@@ -8,25 +8,19 @@
         <title>SoulNotes</title>
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link href="style.css" rel="stylesheet" />
     </head>
     <body>
-    <script src="main.js"></script>
+        <div class="main">
+            <div class="content">
+                <h1>Welcome to SoulNotes!</h1>
+                <h2>Notes with a bit of soul™</h2>
+                <br>
+                <br>
+                <br>
+                Tired of those usual note-sharing apps and need something with a bit of soul? We got you covered.
+            </div>
 
-    <h1>Welcome to SoulNotes!</h1>
-        <h2>Notes with a bit of soul™</h2>
-        <br/>
-        <div>
-            <label>
-                Username:
-                <input type="text" id="username" placeholder="Username"/>
-            </label>
-            <br/>
-            <label>
-                Password:
-                <input type="password" id="password" placeholder="Password"/>
-            </label>
-            <br/>
-            <button class="btn btn-primary" id="login" >Login</button>
         </div>
     </body>
 </html>
