--- a/foundations/src/main/webapp/login.html
+++ b/foundations/src/main/webapp/login.html
@@ -9,12 +9,11 @@
     <title>SoulNotes - Login!</title>
 </head>
 <body>
-<script src="scripts/login.js"></script>
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                <div class="card bg-dark text-white" style="border-radius: 1rem;" id="loginform">
                     <div class="card-body p-5 text-center">
 
                         <div class="mb-md-5 mt-md-4 pb-5">
@@ -34,12 +33,6 @@
 
                             <button class="btn btn-outline-light btn-lg px-5" id="login">Login</button>
 
-                            <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                                <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                                <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                                <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-                            </div>
-
                         </div>
 
                         <div>
@@ -48,10 +41,12 @@
                         </div>
 
                     </div>
+                    <p class="alert alert-danger" id="error-message" hidden></p>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<script src="scripts/login.js"></script>
 </body>
 </html>
