--- a/foundations/src/main/webapp/index.html
+++ b/foundations/src/main/webapp/index.html
@@ -15,10 +15,8 @@
             <div class="content">
                 <h1>Welcome to SoulNotes!</h1>
                 <h2>Notes with a bit of soul™</h2>
-                <br>
-                <br>
-                <br>
-                Tired of those usual note-sharing apps and need something with a bit of soul? We got you covered.
+                <p>Tired of those usual note-sharing apps and need something with a bit of soul? We got you covered.</p>
+                <p><a href="login.html">Login</a> or <a href="register.html">Register</a> here to see for yourself!</p>
             </div>
 
         </div>
