--- a/foundations/src/main/webapp/login.html
+++ b/foundations/src/main/webapp/login.html
@@ -29,7 +29,7 @@
                                 <input type="password" id="password" class="form-control form-control-lg" placeholder="Password"/>
                             </div>
 
-                            <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+                            <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="forgot.html">Forgot password?</a></p>
 
                             <button class="btn btn-outline-light btn-lg px-5" id="login">Login</button>
 
