--- a/foundations/src/main/webapp/update.html
+++ b/foundations/src/main/webapp/update.html
@@ -3,12 +3,38 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>SoulNotes - Update password!</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='scripts/passreset.js'></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script defer src='scripts/passreset.js'></script>
 </head>
 <body>
-    
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                    <div class="card bg-dark text-white" style="border-radius: 1rem;" id="reset">
+                        <div class="card-body p-5 text-center">
+
+                            <div class="mb-md-5 mt-md-4 pb-5">
+
+                                <h2 class="fw-bold mb-2 text-uppercase">Reset Password</h2>
+                                <p class="text-white-50 mb-5">Please enter a new password here.</p>
+
+                                <div class="form-outline form-white mb-4">
+                                    <input type="password" id="password" class="form-control form-control-lg" placeholder="Password"/>
+                                </div>
+
+                                <div class="form-outline form-white mb-4">
+                                    <input type="password" id="confirmPass" class="form-control form-control-lg" placeholder="Confirm password"/>
+                                </div>
+                                <button class="btn btn-outline-light btn-lg px-5" id="update">Update</button>
+                            </div>
+                        </div>
+                        <p class="alert alert-danger" id="error-message" hidden></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 </body>
 </html>
