--- a/foundations/src/main/webapp/forgot.html
+++ b/foundations/src/main/webapp/forgot.html
@@ -20,7 +20,7 @@
                             <div class="form-outline form-white mb-4">
                                 <input type="email" id="email" class="form-control form-control-lg" placeholder="Email"/>
                             </div>
-                            <button class="btn btn-outline-light btn-lg px-5" id="send">Reset Password</button>
+                            <button class="btn btn-outline-light btn-lg px-5" id="reset">Reset Password</button>
                         </div>
                     </div>
                     <p class="alert alert-danger" id="error-message" hidden></p>
