--- a/foundations/src/main/webapp/register.html
+++ b/foundations/src/main/webapp/register.html
@@ -13,7 +13,7 @@
                 <div class="container h-100">
                     <div class="row d-flex justify-content-center align-items-center h-100">
                         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                            <div class="card bg-dark text-white" style="border-radius: 1rem;" id="register">
+                            <div class="card bg-dark text-white" style="border-radius: 1rem;" id="registerform">
                                 <div class="card-body p-5">
                                 <h2 class="text-uppercase text-center mb-5">Create an account</h2>
                     
